--- a/starter/src/frontend/src/components/Sidebar.astro
+++ b/starter/src/frontend/src/components/Sidebar.astro
@@ -54,6 +54,7 @@
         </li>
       </ul>
     </div>
+    <Fragment set:html={'{% if role == "admin" %}'} />
     <div>
       <ul class="flex flex-col flex-1 gap-1 py-3">
         <li class="px-3">
@@ -84,6 +85,7 @@
         </li>
       </ul>
     </div>
+    <Fragment set:html={"{% endif %}"} />
   </nav>
 
   <footer class="p-3 border-t border-secondary-200">
